--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
-.App {
+.main{
+  margin: 10px;
+  padding: 10px;
+}
+
+.form{
+  font-size: 1rem;
+font-weight: 400;
+line-height: 1.5;
+color: #212529;
+box-sizing: border-box;
+height: auto !important;
+}
+
+.gold-calc{
+  
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  box-sizing: border-box;
+  font-size: 120%;
+  height: auto !important;
+}
+
+.input-data{
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  font-size: 120%;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  float: left;
+  margin-right: 0;
+  width: 50%;
+  margin-bottom: 1rem!important;
+}
+
+.mb-0{
+  font-weight: 400;
+line-height: 1.5;
+color: #212529;
+font-size: 120%;
+box-sizing: border-box;
+display: inline-block;
+margin-bottom: 0!important;
+}
+
+.form-control{
+  box-sizing: border-box;
+margin: 0;
+font-family: inherit;
+text-transform: none;
+display: block;
+width: 100%;
+padding: .375rem .75rem;
+line-height: 1.5;
+color: #495057;
+background-color: #fff;
+background-clip: padding-box;
+border: 1px solid #ced4da;
+border-radius: .25rem;
+transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+text-align: center;
+font-size: 1.3em;
+height: auto;
+}
+
+.output-data{
+  font-weight: 400;
+  line-height: 1.5;
+  font-size: 120%;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  float: right;
+  vertical-align: middle;
   text-align: center;
+  color: red;
+  width: 45%;
+  height: auto !important;
+  background-color:cornsilk;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.date{
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  box-sizing: border-box;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  color: red;
+  font-size: 12px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.result{
+  box-sizing: border-box;
+  margin: 0;
+  font-family: inherit;
+  line-height: inherit;
+  border: 0;
+  font-size: 120%;
+  width: 90%;
+  text-align: center;
+  resize: none;
+  box-shadow: none;
+  color: green;
+  overflow: hidden;
 }
